@@ -7,7 +7,8 @@
   ],
   "depends": [
     "Code::Coverage:ver<0.0.3+>:auth<zef:lizmat>",
-    "paths:ver<10.1+>:auth<zef:lizmat>"
+    "paths:ver<10.1+>:auth<zef:lizmat>",
+    "META::constants:ver<0.0.5+>:auth<zef:lizmat>"
   ],
   "description": "Check test files for sufficient coverage",
   "license": "Artistic-2.0",
@@ -25,5 +26,5 @@
   ],
   "test-depends": [
   ],
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
